Fix gap

--- a/style.sass
+++ b/style.sass
@@ -79,6 +79,7 @@ body
   width: 100%
   height: 30px
   clip-path: polygon(0% 0%, 0% 100%, 100% 0%)
+  margin-top: -1px
 
 
 .spacer-lb
